<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NeoBlue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="registrasi_berhasil">Registrasi berhasil! Silakan login.</string>
    <string name="error_message_placeholder">Error message here</string>
    <string name="email_address">Email Address</string>
    <string name="hint_email">Masukan email anda</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukan password anda</string>
    <string name="desc_toggle_password">Toggle password visibility</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="copyright_text">© 2024 NeoBlue Platform. All rights reserved.</string>
    <string name="icon_envelope">Email Icon</string>
    <string name="icon_lock">Lock Icon</string>
</resources>